TRESTLE-733: IndividualEngine now uses RxJava