@@ -4,7 +4,6 @@ import com.codahale.metrics.annotation.Timed;
 import com.nickrobison.trestle.common.exceptions.TrestleMissingFactException;
 import com.nickrobison.trestle.common.exceptions.TrestleMissingIndividualException;
 import com.nickrobison.trestle.ontology.ITrestleOntology;
-import com.nickrobison.trestle.ontology.types.TrestleResult;
 import com.nickrobison.trestle.querybuilder.QueryBuilder;
 import com.nickrobison.trestle.reasoner.annotations.metrics.Metriced;
 import com.nickrobison.trestle.reasoner.caching.TrestleCache;
@@ -23,8 +22,10 @@ import com.nickrobison.trestle.types.events.TrestleEventType;
 import com.nickrobison.trestle.types.relations.ObjectRelation;
 import com.nickrobison.trestle.types.temporal.TemporalObject;
 import com.nickrobison.trestle.types.temporal.TemporalObjectBuilder;
+import io.reactivex.rxjava3.annotations.NonNull;
+import io.reactivex.rxjava3.core.Flowable;
+import io.reactivex.rxjava3.core.Single;
 import io.reactivex.rxjava3.functions.Supplier;
-import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.semanticweb.owlapi.apibinding.OWLManager;
 import org.semanticweb.owlapi.model.*;
@@ -35,13 +36,9 @@ import javax.inject.Inject;
 import java.time.OffsetDateTime;
 import java.time.temporal.Temporal;
 import java.util.*;
-import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionException;
-import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 
 import static com.nickrobison.trestle.common.IRIUtils.parseStringToIRI;
-import static com.nickrobison.trestle.common.LambdaUtils.sequenceCompletableFutures;
 import static com.nickrobison.trestle.common.StaticIRI.*;
 import static com.nickrobison.trestle.reasoner.parser.TemporalParser.parseToTemporal;
 
@@ -79,9 +76,9 @@ public class IndividualEngine {
      * Attempts to retrieve from the cache, if enabled and present
      *
      * @param individualIRI - String of individual IRI
-     * @return - {@link TrestleIndividual}
+     * @return - {@link Single} {@link TrestleIndividual}
      */
-    public TrestleIndividual getTrestleIndividual(String individualIRI) {
+    public Single<TrestleIndividual> getTrestleIndividual(String individualIRI) {
         return getTrestleIndividual(df.getOWLNamedIndividual(parseStringToIRI(individualIRI)), null);
     }
 
@@ -91,9 +88,9 @@ public class IndividualEngine {
      *
      * @param individualIRI - String of individual IRI
      * @param transaction   - {@link TrestleTransaction} object to inherit from
-     * @return - {@link TrestleIndividual}
+     * @return - {@link Single} {@link TrestleIndividual}
      */
-    public TrestleIndividual getTrestleIndividual(String individualIRI, @Nullable TrestleTransaction transaction) {
+    public Single<TrestleIndividual> getTrestleIndividual(String individualIRI, @Nullable TrestleTransaction transaction) {
         return getTrestleIndividual(df.getOWLNamedIndividual(parseStringToIRI(individualIRI)), transaction);
     }
 
@@ -102,9 +99,9 @@ public class IndividualEngine {
      * Attempts to retrieve from the cache, if enabled and present
      *
      * @param individual - {@link OWLNamedIndividual}
-     * @return - {@link TrestleIndividual}
+     * @return - {@link Single} {@link TrestleIndividual}
      */
-    public TrestleIndividual getTrestleIndividual(OWLNamedIndividual individual) {
+    public Single<TrestleIndividual> getTrestleIndividual(OWLNamedIndividual individual) {
         return getTrestleIndividual(individual, null);
     }
 
@@ -115,130 +112,63 @@ public class IndividualEngine {
      *
      * @param individual  - {@link OWLNamedIndividual}
      * @param transaction - {@link TrestleTransaction} object to inherit from
-     * @return - {@link TrestleIndividual}
+     * @return - {@link Single} {@link TrestleIndividual}
      */
     @Timed
-    public TrestleIndividual getTrestleIndividual(OWLNamedIndividual individual, @Nullable TrestleTransaction transaction) {
-
+    public Single<TrestleIndividual> getTrestleIndividual(OWLNamedIndividual individual, @Nullable TrestleTransaction transaction) {
         logger.debug("Building trestle individual {}", individual);
         @Nullable final TrestleIndividual cacheIndividual = this.trestleCache.getTrestleIndividual(individual);
         if (cacheIndividual != null) {
             logger.debug("Retrieved {} from cache", individual);
-            return cacheIndividual;
+            return Single.just(cacheIndividual);
         }
 
         final TrestleTransaction trestleTransaction = this.ontology.createandOpenNewTransaction(transaction, false);
+        // Get the temporals
+        final Single<TrestleIndividual> temporalSingle = ontology.getAllDataPropertiesForIndividual(individual).collect((Supplier<HashSet<OWLDataPropertyAssertionAxiom>>) HashSet::new, HashSet::add)
+                .map(properties -> new TemporalPropertiesPair(individual, properties))
+                .map(temporalPair -> TemporalObjectBuilder.buildTemporalFromProperties(temporalPair.getTemporalProperties(), null, temporalPair.getTemporalID()))
+                .map(temporalObject -> new TrestleIndividual(individual.toStringID(), temporalObject.orElseThrow(() -> new CompletionException(new TrestleMissingIndividualException(individual)))));
 
-        try {
-            final CompletableFuture<TrestleIndividual> temporalFuture = CompletableFuture.supplyAsync(() -> {
-                final TrestleTransaction tt = this.ontology.createandOpenNewTransaction(trestleTransaction);
-                final Set<OWLDataPropertyAssertionAxiom> individualDataProperties = ontology.getAllDataPropertiesForIndividual(individual).collect((Supplier<HashSet<OWLDataPropertyAssertionAxiom>>) HashSet::new, HashSet::add).blockingGet();
-                this.ontology.returnAndCommitTransaction(tt);
-                return new TemporalPropertiesPair(individual, individualDataProperties);
-            })
-                    .thenApply(temporalPair -> TemporalObjectBuilder.buildTemporalFromProperties(temporalPair.getTemporalProperties(), null, temporalPair.getTemporalID()))
-                    .thenApply(temporalObject -> new TrestleIndividual(individual.toStringID(), temporalObject.orElseThrow(() -> new CompletionException(new TrestleMissingIndividualException(individual)))));
+        // Get the facts
+        final Single<List<TrestleFact<Object>>> factSingle = ontology.getIndividualObjectProperty(individual, hasFactIRI)
+                .flatMapSingle(fact -> buildTrestleFact(fact.getObject().asOWLNamedIndividual(), null)).toList();
 
-//                Get all the facts
-            final Optional<List<OWLObjectPropertyAssertionAxiom>> individualFacts = Optional.of(ontology.getIndividualObjectProperty(individual, hasFactIRI).toList().blockingGet());
-            final List<CompletableFuture<TrestleFact>> factFutureList = individualFacts.orElse(new ArrayList<>())
-                    .stream()
-                    .map(fact -> buildTrestleFact(fact.getObject().asOWLNamedIndividual(), trestleTransaction))
-                    .collect(Collectors.toList());
-
-            CompletableFuture<List<TrestleFact>> factsFuture = sequenceCompletableFutures(factFutureList);
-
-//                Get the relations
-            final CompletableFuture<List<TrestleRelation>> relationsFuture = CompletableFuture.supplyAsync(() -> {
-                final TrestleTransaction tt = this.ontology.createandOpenNewTransaction(trestleTransaction);
-                String query = this.qb.buildIndividualRelationQuery(individual);
-                try {
-                    return ontology.executeSPARQLResults(query).toList().blockingGet();
-                } catch (Exception e) {
-                    this.ontology.returnAndAbortTransaction(tt);
-                    final Throwable cause = e.getCause();
-                    if (cause == null) {
-                        throw new CompletionException("Unable to get cause", e);
-                    }
-                    throw new CompletionException(cause);
-                } finally {
-                    this.ontology.returnAndCommitTransaction(tt);
-                }
-            }, individualThreadPool)
-                    .thenApply(sparqlResults -> {
-                        List<TrestleRelation> relations = new ArrayList<>();
-                        sparqlResults
-                                .stream()
-//                            We want the subProperties of Temporal/Spatial/Event relations. So we filter them out
-                                .filter(result -> !result.unwrapIndividual("o").asOWLNamedIndividual().getIRI().equals(temporalRelationIRI))
-                                .filter(result -> !result.unwrapIndividual("o").asOWLNamedIndividual().getIRI().equals(spatialRelationIRI))
-                                .filter(result -> !result.unwrapIndividual("o").asOWLNamedIndividual().getIRI().equals(eventRelationIRI))
-                                .filter(result -> !result.unwrapIndividual("o").asOWLNamedIndividual().getIRI().equals(componentRelationIRI))
+        // Get the relationships
+        String query = this.qb.buildIndividualRelationQuery(individual);
+        final Single<List<TrestleRelation>> relationSingle = ontology.executeSPARQLResults(query)
+                //                            We want the subProperties of Temporal/Spatial/Event relations. So we filter them out
+                .filter(result -> !result.unwrapIndividual("o").asOWLNamedIndividual().getIRI().equals(temporalRelationIRI))
+                .filter(result -> !result.unwrapIndividual("o").asOWLNamedIndividual().getIRI().equals(spatialRelationIRI))
+                .filter(result -> !result.unwrapIndividual("o").asOWLNamedIndividual().getIRI().equals(eventRelationIRI))
+                .filter(result -> !result.unwrapIndividual("o").asOWLNamedIndividual().getIRI().equals(componentRelationIRI))
 //                            Filter out self
-                                .filter(result -> !result.unwrapIndividual("p").asOWLNamedIndividual().equals(individual))
-                                .forEach(result -> relations.add(new TrestleRelation(result.unwrapIndividual("m").toStringID(),
-                                        ObjectRelation.getRelationFromIRI(IRI.create(result.unwrapIndividual("o").toStringID())),
-                                        result.unwrapIndividual("p").toStringID())));
-                        return relations;
-                    });
+                .filter(result -> !result.unwrapIndividual("p").asOWLNamedIndividual().equals(individual))
+                .map(result -> new TrestleRelation(result.unwrapIndividual("m").toStringID(),
+                        ObjectRelation.getRelationFromIRI(IRI.create(result.unwrapIndividual("o").toStringID())),
+                        result.unwrapIndividual("p").toStringID())).toList();
 
-//        Get the events
-            final CompletableFuture<List<TrestleEvent>> eventsFuture = CompletableFuture.supplyAsync(() -> {
-                final TrestleTransaction tt = this.ontology.createandOpenNewTransaction(trestleTransaction);
-                final String query = this.qb.buildIndividualEventQuery(individual);
-                try {
-                    return this.ontology.executeSPARQLResults(query).toList().blockingGet();
-                } catch (Exception e) {
-                    this.ontology.returnAndAbortTransaction(tt);
-                    final Throwable cause = e.getCause();
-                    if (cause == null) {
-                        throw new CompletionException("Unable to get cause", e);
-                    }
-                    throw new CompletionException(cause);
-                } finally {
-                    this.ontology.returnAndCommitTransaction(tt);
-                }
-            }, this.individualThreadPool)
-                    .thenApply(results -> results
-                            .stream()
-                            .filter(result -> !result.unwrapIndividual("type").asOWLNamedIndividual().getIRI().equals(trestleEventIRI))
-                            .map(result -> {
-                                final OWLNamedIndividual eventIndividual = result.unwrapIndividual("r").asOWLNamedIndividual();
-                                final IRI typeIRI = result.unwrapIndividual("type").asOWLNamedIndividual().getIRI();
-                                final TrestleEventType eventType = TrestleEventType.getEventClassFromIRI(typeIRI);
-                                final Temporal temporal = parseToTemporal(result.unwrapLiteral("t"), OffsetDateTime.class);
-                                return new TrestleEvent(eventType, individual, eventIndividual, temporal);
-                            })
-                            .collect(Collectors.toList()));
+        // Get the events
+        final String eQuery = this.qb.buildIndividualEventQuery(individual);
+        final Single<List<TrestleEvent>> eventSingle = this.ontology.executeSPARQLResults(eQuery)
+                .filter(result -> !result.unwrapIndividual("type").asOWLNamedIndividual().getIRI().equals(trestleEventIRI))
+                .map(result -> {
+                    final OWLNamedIndividual eventIndividual = result.unwrapIndividual("r").asOWLNamedIndividual();
+                    final IRI typeIRI = result.unwrapIndividual("type").asOWLNamedIndividual().getIRI();
+                    final TrestleEventType eventType = TrestleEventType.getEventClassFromIRI(typeIRI);
+                    final Temporal temporal = parseToTemporal(result.unwrapLiteral("t"), OffsetDateTime.class);
+                    return new TrestleEvent(eventType, individual, eventIndividual, temporal);
+                })
+                .toList();
 
-            final CompletableFuture<TrestleIndividual> individualFuture = temporalFuture.thenCombine(relationsFuture, (trestleIndividual, relations) -> {
-                relations.forEach(trestleIndividual::addRelation);
-                return trestleIndividual;
-            })
-                    .thenCombine(factsFuture, (trestleIndividual, trestleFacts) -> {
-                        trestleFacts.forEach(trestleIndividual::addFact);
-                        return trestleIndividual;
-                    })
-                    .thenCombine(eventsFuture, (trestleIndividual, events) -> {
-                        events.forEach(trestleIndividual::addEvent);
-                        return trestleIndividual;
-                    });
-
-
-            TrestleIndividual trestleIndividual = individualFuture.get();
-            this.trestleCache.writeTrestleIndividual(individual, trestleIndividual);
+        return Single.zip(temporalSingle, factSingle, relationSingle, eventSingle, (trestleIndividual, facts, relations, events) -> {
+            facts.forEach(trestleIndividual::addFact);
+            relations.forEach(trestleIndividual::addRelation);
+            events.forEach(trestleIndividual::addEvent);
             return trestleIndividual;
-        } catch (InterruptedException | ExecutionException e) {
-            logger.error("Interruption exception building Trestle Individual {}", individual, e);
-            this.ontology.returnAndAbortTransaction(trestleTransaction);
-            final Throwable cause = e.getCause();
-            if (cause == null) {
-                throw new CompletionException("Unable to get cause", e);
-            }
-            return ExceptionUtils.rethrow(cause);
-        } finally {
-            this.ontology.returnAndCommitTransaction(trestleTransaction);
-        }
+        })
+                .doOnSuccess(success -> this.ontology.returnAndCommitTransaction(trestleTransaction))
+                .doOnError(error -> this.ontology.returnAndAbortTransaction(trestleTransaction));
     }
 
     /**
@@ -246,9 +176,9 @@ public class IndividualEngine {
      *
      * @param clazz      - Class of object get get event for
      * @param individual - {@link OWLNamedIndividual} to gather events for
-     * @return - {@link Optional} {@link Set} of {@link TrestleEvent} for the given individual
+     * @return - {@link Flowable} of {@link TrestleEvent} for the given individual
      */
-    public Optional<Set<TrestleEvent>> getIndividualEvents(Class<?> clazz, OWLNamedIndividual individual) {
+    public Flowable<TrestleEvent> getIndividualEvents(Class<?> clazz, OWLNamedIndividual individual) {
         return getIndividualEvents(clazz, individual, null);
     }
 
@@ -259,32 +189,17 @@ public class IndividualEngine {
      * @param clazz       - Class of object get get event for
      * @param individual  - {@link OWLNamedIndividual} to gather events for
      * @param transaction - {@link TrestleTransaction} object to inherit from
-     * @return - {@link Optional} {@link Set} of {@link TrestleEvent} for the given individual
+     * @return - {@link Flowable} of {@link TrestleEvent} for the given individual
      */
-    public Optional<Set<TrestleEvent>> getIndividualEvents(Class<?> clazz, OWLNamedIndividual individual, @Nullable TrestleTransaction transaction) {
+    public Flowable<TrestleEvent> getIndividualEvents(Class<?> clazz, OWLNamedIndividual individual, @Nullable TrestleTransaction transaction) {
 
         final Class<? extends Temporal> temporalType = TemporalParser.getTemporalType(clazz);
-
         logger.debug("Retrieving events for {}", individual);
         //        Build the query string
         final String eventQuery = this.qb.buildIndividualEventQuery(individual);
         final TrestleTransaction trestleTransaction = this.ontology.createandOpenNewTransaction(transaction, false);
-        final List<TrestleResult> resultSet;
-        try {
-            resultSet = this.ontology.executeSPARQLResults(eventQuery).toList().blockingGet();
-        } catch (Exception e) {
-            logger.error("Unable to get events for individual: {}", individual);
-            this.ontology.returnAndAbortTransaction(trestleTransaction);
-            return Optional.empty();
-        } finally {
-            this.ontology.returnAndCommitTransaction(trestleTransaction);
-        }
-//        Parse out the events
-//        I think I can suppress this, because if the above method throws an error, the catch statement will return an empty optional
-        @SuppressWarnings({"dereference.of.nullable"}) final List<TrestleResult> results = resultSet;
-        final Set<TrestleEvent> individualEvents = results
-                .stream()
-//                Filter out Trestle_Event from results
+
+        return this.ontology.executeSPARQLResults(eventQuery)
                 .filter(result -> !result
                         .unwrapIndividual("type")
                         .asOWLNamedIndividual()
@@ -296,9 +211,8 @@ public class IndividualEngine {
                     final Temporal temporal = parseToTemporal(result.unwrapLiteral("t"), temporalType);
                     return new TrestleEvent(eventType, individual, eventIndividual, temporal);
                 })
-                .collect(Collectors.toSet());
-
-        return Optional.of(individualEvents);
+                .doOnError(error -> this.ontology.returnAndAbortTransaction(trestleTransaction))
+                .doOnComplete(() -> this.ontology.returnAndCommitTransaction(trestleTransaction));
     }
 
 
@@ -306,64 +220,57 @@ public class IndividualEngine {
      * Build a TrestleFact from a given OWLIndividual
      * Retrieves all the asserted properties and types of a given Individual, in their native forms.
      *
-     * @param factIndividual    - OWLNamedIndividual to construct fact from
-     * @param transactionObject - TrestleTransaction object that gets passed from the parent function
+     * @param factIndividual    - {@link OWLNamedIndividual} to construct fact from
+     * @param transactionObject - {@link TrestleTransaction} object that gets passed from the parent function
      * @return - TrestleFact
      */
-    private CompletableFuture<TrestleFact> buildTrestleFact(OWLNamedIndividual factIndividual, TrestleTransaction transactionObject) {
-        return CompletableFuture.supplyAsync(() -> {
-            final TrestleTransaction tt = this.ontology.createandOpenNewTransaction(transactionObject);
-            try {
-                return ontology.getAllDataPropertiesForIndividual(factIndividual).toList().blockingGet();
-            } finally {
-                this.ontology.returnAndCommitTransaction(tt);
-            }
+    private @NonNull Single<TrestleFact<Object>> buildTrestleFact(OWLNamedIndividual factIndividual, TrestleTransaction transactionObject) {
+        final TrestleTransaction tt = this.ontology.createandOpenNewTransaction(transactionObject);
+        final @NonNull Flowable<OWLDataPropertyAssertionAxiom> propertiesFlow = ontology.getAllDataPropertiesForIndividual(factIndividual)
+                // Share the data properties flow, but wait until everyone is subscribed, before emitting
+                .publish()
+                .autoConnect(3);
 
-        }, factThreadPool)
-                .thenApply(dataProperties -> {
-                    //            Build fact pair
-                    final Optional<OWLDataPropertyAssertionAxiom> dataPropertyAssertion = dataProperties
-                            .stream()
-                            .filter(property -> !(property.getProperty().asOWLDataProperty().getIRI().equals(temporalDatabaseFromIRI) ||
-                                    property.getProperty().asOWLDataProperty().getIRI().equals(temporalDatabaseToIRI) ||
-                                    property.getProperty().asOWLDataProperty().getIRI().equals(temporalValidFromIRI) ||
-                                    property.getProperty().asOWLDataProperty().getIRI().equals(temporalValidToIRI) ||
-                                    property.getProperty().asOWLDataProperty().getIRI().equals(temporalValidAtIRI) ||
-                                    property.getProperty().asOWLDataProperty().getIRI().equals(temporalStartIRI) ||
-                                    property.getProperty().asOWLDataProperty().getIRI().equals(temporalEndIRI) ||
-                                    property.getProperty().asOWLDataProperty().getIRI().equals(temporalAtIRI) ||
-                                    property.getProperty().asOWLDataProperty().getIRI().equals(temporalPropertyIRI)))
-                            .findFirst();
+        // Build fact pair
+        final @NonNull Single<OWLDataPropertyAssertionAxiom> valueFlow = propertiesFlow
+                .filter(property -> !(property.getProperty().asOWLDataProperty().getIRI().equals(temporalDatabaseFromIRI) ||
+                        property.getProperty().asOWLDataProperty().getIRI().equals(temporalDatabaseToIRI) ||
+                        property.getProperty().asOWLDataProperty().getIRI().equals(temporalValidFromIRI) ||
+                        property.getProperty().asOWLDataProperty().getIRI().equals(temporalValidToIRI) ||
+                        property.getProperty().asOWLDataProperty().getIRI().equals(temporalValidAtIRI) ||
+                        property.getProperty().asOWLDataProperty().getIRI().equals(temporalStartIRI) ||
+                        property.getProperty().asOWLDataProperty().getIRI().equals(temporalEndIRI) ||
+                        property.getProperty().asOWLDataProperty().getIRI().equals(temporalAtIRI) ||
+                        property.getProperty().asOWLDataProperty().getIRI().equals(temporalPropertyIRI)))
+                .firstOrError();
 
-                    final OWLDataPropertyAssertionAxiom assertion = dataPropertyAssertion.orElseThrow(() -> new TrestleMissingFactException(factIndividual));
-                    final Class<?> datatype = this.typeConverter.lookupJavaClassFromOWLDatatype(assertion, null);
-//                    I don't know why this is throwing an error, so I'm going to ignore it for now
-                    @SuppressWarnings("type.argument.type.incompatible") final Object literalObject = this.typeConverter.extractOWLLiteral(datatype, assertion.getObject());
-//            Get valid time
-                    final Set<OWLDataPropertyAssertionAxiom> validTemporals = dataProperties
-                            .stream()
-                            .filter(property -> property.getProperty().asOWLDataProperty().getIRI().equals(temporalValidFromIRI) ||
-                                    property.getProperty().asOWLDataProperty().getIRI().equals(temporalValidToIRI) ||
-                                    property.getProperty().asOWLDataProperty().getIRI().equals(temporalValidAtIRI))
-                            .collect(Collectors.toSet());
-                    final Optional<TemporalObject> validTemporal = TemporalObjectBuilder.buildTemporalFromProperties(validTemporals, null, "blank");
-//            Database time
-                    final Set<OWLDataPropertyAssertionAxiom> dbTemporals = dataProperties
-                            .stream()
-                            .filter(property -> property.getProperty().asOWLDataProperty().getIRI().equals(temporalDatabaseFromIRI) ||
-                                    property.getProperty().asOWLDataProperty().getIRI().equals(temporalDatabaseToIRI))
-                            .collect(Collectors.toSet());
-                    final Optional<TemporalObject> dbTemporal = TemporalObjectBuilder.buildTemporalFromProperties(dbTemporals, null, "blank");
-                    if (literalObject == null) {
-                        throw new IllegalStateException(String.format("Fact object cannot be null for %s", factIndividual));
-                    }
-                    return new TrestleFact<>(
-                            factIndividual.getIRI().toString(),
-                            assertion.getProperty().asOWLDataProperty().getIRI().getShortForm(),
-                            literalObject,
-                            null,
-                            null, validTemporal.orElseThrow(() -> new TrestleMissingFactException(factIndividual)),
-                            dbTemporal.orElseThrow(() -> new TrestleMissingFactException(factIndividual)));
-                });
+        // Get valid temporal object
+        final Single<Optional<TemporalObject>> validTemporalFlow = propertiesFlow
+                .filter(property -> property.getProperty().asOWLDataProperty().getIRI().equals(temporalValidFromIRI) ||
+                        property.getProperty().asOWLDataProperty().getIRI().equals(temporalValidToIRI) ||
+                        property.getProperty().asOWLDataProperty().getIRI().equals(temporalValidAtIRI))
+                .collect((Supplier<HashSet<OWLDataPropertyAssertionAxiom>>) HashSet::new, HashSet::add)
+                .map(validTemporals -> TemporalObjectBuilder.buildTemporalFromProperties(validTemporals, null, "blank"));
+
+        // Get DB temporal object
+        final Single<Optional<TemporalObject>> dbTemporalFlow = propertiesFlow
+                .filter(property -> property.getProperty().asOWLDataProperty().getIRI().equals(temporalDatabaseFromIRI) ||
+                        property.getProperty().asOWLDataProperty().getIRI().equals(temporalDatabaseToIRI))
+                .collect((Supplier<HashSet<OWLDataPropertyAssertionAxiom>>) HashSet::new, HashSet::add)
+                .map(validTemporals -> TemporalObjectBuilder.buildTemporalFromProperties(validTemporals, null, "blank"));
+
+        return Single.zip(valueFlow, validTemporalFlow, dbTemporalFlow, (assertion, validTemporal, dbTemporal) -> {
+            final Class<?> datatype = this.typeConverter.lookupJavaClassFromOWLDatatype(assertion, null);
+            final Object literalObject = this.typeConverter.extractOWLLiteral(datatype, assertion.getObject());
+            return new TrestleFact<>(
+                    factIndividual.getIRI().toString(),
+                    assertion.getProperty().asOWLDataProperty().getIRI().getShortForm(),
+                    literalObject,
+                    null,
+                    null, validTemporal.orElseThrow(() -> new TrestleMissingFactException(factIndividual)),
+                    dbTemporal.orElseThrow(() -> new TrestleMissingFactException(factIndividual)));
+        })
+                .doOnSuccess(success -> this.ontology.returnAndCommitTransaction(tt))
+                .doOnError(error -> this.ontology.returnAndAbortTransaction(tt));
     }
 }
